# MyMAX

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/ru/mglife/mymax/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/mglife/mymax/: Chat.kt  ChatAdapter.kt  ChatState.kt  CryptoManager.kt  MLSManager.kt  MainActivity.kt  Message.kt  MessageActivity.kt  MessageAdapter.kt  NotificationHelper.kt  SettingsActivity.kt  StorageManager.kt
app/src/main/res/layout/: activity_main.xml  activity_message.xml  activity_settings.xml  item_chat.xml
app/src/main/res/menu/: bottom_nav_menu.xml  chat_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/mglife/mymax/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust_lib/: Cargo.toml  build_lib.sh
rust_lib/src/: lib.rs
