[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Важно: создаем динамическую библиотеку .so

[dependencies]
jni = "0.21.1"
openmls = "0.5.0" # Сама библиотека MLS
serde = { version = "1.0", features = ["derive"] } # Для сериализации данных
base64 = "0.21"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
